--- a/DesafioFirebase/app/src/main/res/values/strings.xml
+++ b/DesafioFirebase/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">DesafioFirebase</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="remember">Remember</string>
+    <string name="log_in">log in</string>
+    <string name="create_account">Create account</string>
 </resources>
