--- a/DesafioFirebase/app/src/main/res/values/strings.xml
+++ b/DesafioFirebase/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="remember">Remember</string>
     <string name="log_in">log in</string>
     <string name="create_account">Create account</string>
+    <string name="name">Name</string>
+    <string name="repeat_password">Repeat password</string>
 </resources>
