--- a/DesafioFirebase/app/src/main/res/values/strings.xml
+++ b/DesafioFirebase/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DesafioFirebase</string>
+    <string name="app_name">Desafio Firebase</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="remember">Remember</string>
@@ -8,10 +8,9 @@
     <string name="name">Name</string>
     <string name="repeat_password">Repeat password</string>
     <string name="add_new_game">add new game</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="created_at">Created at</string>
     <string name="description">Description</string>
     <string name="save_game">save game</string>
     <string name="add_game_image">add game image</string>
+    <string name="game_image">game image</string>
 </resources>
